--- a/Curso Web Moderno com JavaScript COMPLETO + Projetos/webpack/public/estilo.css
+++ b/Curso Web Moderno com JavaScript COMPLETO + Projetos/webpack/public/estilo.css
@@ -2,7 +2,11 @@
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/assets/css/estilo.css ***!
   \********************************************************************************************************************/
 body {
-  background-color: #444; }
+  background-color: #444;
+  background-image: url(74607ace448435964099.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  height: 100vh; }
 
 /*!*********************************************************************************************************************!*\
   !*** css ./node_modules/css-loader/dist/cjs.js!./node_modules/sass-loader/dist/cjs.js!./src/assets/scss/index.scss ***!
